# POC

./: .coveragerc  .gitignore  Dockerfile  a.py  config.py  locustfile.py  logging_examples.py  main.py  pyproject.toml  pytest.ini  requirements.txt  uvicorn_log_config.py
app/: database.py  dependencies.py  models.py
app/routers/: base.py  items.py
app/service/classification/: classify.py
app/service/ocr/: azure_ai_vision.py
app/service/store/: databrics_store.py
common/exceptions/: handlers.py  pnc_exceptions.py
common/helpers/: retry_service.py
common/logging/: core.py  custom_logger.py  middleware.py  request_context.py  schemas.py  structured_logger.py
examples/: logging_examples.py
tests/: conftest.py  test_handlers.py  test_pnc_exceptions.py  test_retry_service.py
