[project]
name = "fastapiproject1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "databricks-cli>=0.18.0",
    "databricks-sdk>=0.50.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "idna==3.10",
    "isort>=6.0.1",
    "pip-audit>=2.9.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-describe>=2.2.0",
    "pytest-watch>=4.2.0",
    "requests>=2.32.3",
    "ruff>=0.11.7",
    "starlette>=0.46.2",
    "structlog>=25.2.0",
    "uvicorn>=0.34.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
