[project]
name = "fastapiproject1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "idna==3.10",
    "locust>=2.37.4",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
    "starlette>=0.46.2",
    "structlog>=25.2.0",
    "uvicorn>=0.34.1",
]
[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.11.7",
    "pip-audit>=2.9.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-describe>=2.2.0",
    "pytest-watch>=4.2.0",
    "coverage>=7.8.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
